checking output csv

--- a/round_3.ipynb
+++ b/round_3.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "id": "0c38d6de-6f74-4912-ae78-1587afab1163",
    "metadata": {},
    "outputs": [],
@@ -56,16 +56,15 @@
     "def json_to_csv(json_file, csv_file):\n",
     "    with open(json_file, 'r') as json_loader:\n",
     "        data = json.load(json_loader)\n",
-    "    with open(csv_file, 'r', newline='') as csv_loader:\n",
-    "        with open(csv_loader, 'w', newline='') as csv_writer:\n",
-    "            writer = csv.writer(csv_writer)\n",
-    "            writer.writerow([\"Time\", \"Temperature(C)\", \"Temperature(F)\", \"FeelsLike(C)\", \"FeelsLike(F)\", \"DewPoint(C)\", \"DewPoint(F)\", \n",
-    "                             \"Humidity\", \"WindSpeed(Kmph)\", \"WindSpeed(Miles)\", \"WindGust(Kmph)\", \"WindGust(Miles)\", \"WindDirection(Degree)\", \n",
-    "                             \"WindDirection(16Point)\", \"WindChill(C)\", \"WindChill(F)\", \"HeatIndex(C)\", \"HeatIndex(F)\", \"Pressure\", \n",
-    "                             \"Precipitation(mm)\", \"CloudCover\", \"Visibility\", \"WeatherCode\", \"WeatherDescription\", \"WeatherIconUrl\"])\n",
+    "    with open(csv_file, 'w', newline='') as csv_writer:\n",
+    "        writer = csv.writer(csv_writer)\n",
+    "        writer.writerow([\"Time\", \"Temperature(C)\", \"Temperature(F)\", \"FeelsLike(C)\", \"FeelsLike(F)\", \"DewPoint(C)\", \"DewPoint(F)\", \n",
+    "                         \"Humidity\", \"WindSpeed(Kmph)\", \"WindSpeed(Miles)\", \"WindGust(Kmph)\", \"WindGust(Miles)\", \"WindDirection(Degree)\", \n",
+    "                         \"WindDirection(16Point)\", \"WindChill(C)\", \"WindChill(F)\", \"HeatIndex(C)\", \"HeatIndex(F)\", \"Pressure\", \n",
+    "                         \"Precipitation(mm)\", \"CloudCover\", \"Visibility\", \"WeatherCode\", \"WeatherDescription\", \"WeatherIconUrl\"])\n",
     "\n",
-    "    for idx in range(len(data['data']['weather'])):\n",
-    "        for hour in data['data']['weather'][idx]['hourly']:\n",
+    "        for idx in range(len(data['data']['weather'])):\n",
+    "            for hour in data['data']['weather'][idx]['hourly']:\n",
     "                writer.writerow([\n",
     "                    hour['time'],\n",
     "                    hour['tempC'],\n",
@@ -92,37 +91,267 @@
     "                    hour['weatherCode'],\n",
     "                    hour['weatherDesc'][0]['value'],\n",
     "                    hour['weatherIconUrl'][0]['value']\n",
-    "            ])"
+    "                ])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "id": "e1e0a8da-05b4-4e3c-94a4-b9004898d616",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "expected str, bytes or os.PathLike object, not TextIOWrapper",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[47], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mjson_to_csv\u001b[49m\u001b[43m(\u001b[49m\u001b[43mjson_file\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moutput_csv\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[46], line 5\u001b[0m, in \u001b[0;36mjson_to_csv\u001b[1;34m(json_file, csv_file)\u001b[0m\n\u001b[0;32m      3\u001b[0m     data \u001b[38;5;241m=\u001b[39m json\u001b[38;5;241m.\u001b[39mload(json_loader)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(csv_file, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m, newline\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m csv_loader:\n\u001b[1;32m----> 5\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mcsv_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mw\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnewline\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m csv_writer:\n\u001b[0;32m      6\u001b[0m         writer \u001b[38;5;241m=\u001b[39m csv\u001b[38;5;241m.\u001b[39mwriter(csv_writer)\n\u001b[0;32m      7\u001b[0m         writer\u001b[38;5;241m.\u001b[39mwriterow([\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTime\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTemperature(C)\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTemperature(F)\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFeelsLike(C)\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFeelsLike(F)\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDewPoint(C)\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDewPoint(F)\u001b[39m\u001b[38;5;124m\"\u001b[39m, \n\u001b[0;32m      8\u001b[0m                          \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHumidity\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWindSpeed(Kmph)\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWindSpeed(Miles)\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWindGust(Kmph)\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWindGust(Miles)\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWindDirection(Degree)\u001b[39m\u001b[38;5;124m\"\u001b[39m, \n\u001b[0;32m      9\u001b[0m                          \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWindDirection(16Point)\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWindChill(C)\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWindChill(F)\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHeatIndex(C)\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHeatIndex(F)\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPressure\u001b[39m\u001b[38;5;124m\"\u001b[39m, \n\u001b[0;32m     10\u001b[0m                          \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPrecipitation(mm)\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCloudCover\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mVisibility\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWeatherCode\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWeatherDescription\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWeatherIconUrl\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\interactiveshell.py:310\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    303\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[0;32m    304\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    305\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    306\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    307\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    308\u001b[0m     )\n\u001b[1;32m--> 310\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mTypeError\u001b[0m: expected str, bytes or os.PathLike object, not TextIOWrapper"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "json_to_csv(json_file, output_csv)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "917fb148-ecaf-450b-b935-6b5574417bd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "d5c65594-83a9-41be-a91f-61145cee1f3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_csv = pd.read_csv('output.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "ba23a553-b7ce-4fe5-bb9b-346825469821",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Temperature(C)</th>\n",
+       "      <th>Temperature(F)</th>\n",
+       "      <th>FeelsLike(C)</th>\n",
+       "      <th>FeelsLike(F)</th>\n",
+       "      <th>DewPoint(C)</th>\n",
+       "      <th>DewPoint(F)</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>WindSpeed(Kmph)</th>\n",
+       "      <th>WindSpeed(Miles)</th>\n",
+       "      <th>...</th>\n",
+       "      <th>WindChill(F)</th>\n",
+       "      <th>HeatIndex(C)</th>\n",
+       "      <th>HeatIndex(F)</th>\n",
+       "      <th>Pressure</th>\n",
+       "      <th>Precipitation(mm)</th>\n",
+       "      <th>CloudCover</th>\n",
+       "      <th>Visibility</th>\n",
+       "      <th>WeatherCode</th>\n",
+       "      <th>WeatherDescription</th>\n",
+       "      <th>WeatherIconUrl</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>43</td>\n",
+       "      <td>3</td>\n",
+       "      <td>38</td>\n",
+       "      <td>4</td>\n",
+       "      <td>38</td>\n",
+       "      <td>83</td>\n",
+       "      <td>15</td>\n",
+       "      <td>10</td>\n",
+       "      <td>...</td>\n",
+       "      <td>38</td>\n",
+       "      <td>6</td>\n",
+       "      <td>43</td>\n",
+       "      <td>1020</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2</td>\n",
+       "      <td>266</td>\n",
+       "      <td>Light drizzle</td>\n",
+       "      <td>http://cdn.worldweatheronline.net/images/wsymb...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>100</td>\n",
+       "      <td>6</td>\n",
+       "      <td>44</td>\n",
+       "      <td>4</td>\n",
+       "      <td>38</td>\n",
+       "      <td>4</td>\n",
+       "      <td>39</td>\n",
+       "      <td>85</td>\n",
+       "      <td>15</td>\n",
+       "      <td>9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>38</td>\n",
+       "      <td>6</td>\n",
+       "      <td>44</td>\n",
+       "      <td>1020</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>100</td>\n",
+       "      <td>3</td>\n",
+       "      <td>266</td>\n",
+       "      <td>Light drizzle</td>\n",
+       "      <td>http://cdn.worldweatheronline.net/images/wsymb...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>200</td>\n",
+       "      <td>7</td>\n",
+       "      <td>44</td>\n",
+       "      <td>4</td>\n",
+       "      <td>39</td>\n",
+       "      <td>5</td>\n",
+       "      <td>40</td>\n",
+       "      <td>87</td>\n",
+       "      <td>14</td>\n",
+       "      <td>9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>39</td>\n",
+       "      <td>7</td>\n",
+       "      <td>44</td>\n",
+       "      <td>1020</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>100</td>\n",
+       "      <td>4</td>\n",
+       "      <td>353</td>\n",
+       "      <td>Light rain shower</td>\n",
+       "      <td>http://cdn.worldweatheronline.net/images/wsymb...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>300</td>\n",
+       "      <td>7</td>\n",
+       "      <td>44</td>\n",
+       "      <td>4</td>\n",
+       "      <td>39</td>\n",
+       "      <td>5</td>\n",
+       "      <td>41</td>\n",
+       "      <td>89</td>\n",
+       "      <td>14</td>\n",
+       "      <td>9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>39</td>\n",
+       "      <td>7</td>\n",
+       "      <td>44</td>\n",
+       "      <td>1019</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>100</td>\n",
+       "      <td>5</td>\n",
+       "      <td>353</td>\n",
+       "      <td>Light rain shower</td>\n",
+       "      <td>http://cdn.worldweatheronline.net/images/wsymb...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>400</td>\n",
+       "      <td>7</td>\n",
+       "      <td>45</td>\n",
+       "      <td>5</td>\n",
+       "      <td>40</td>\n",
+       "      <td>6</td>\n",
+       "      <td>42</td>\n",
+       "      <td>91</td>\n",
+       "      <td>13</td>\n",
+       "      <td>8</td>\n",
+       "      <td>...</td>\n",
+       "      <td>40</td>\n",
+       "      <td>7</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1019</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>100</td>\n",
+       "      <td>6</td>\n",
+       "      <td>353</td>\n",
+       "      <td>Light rain shower</td>\n",
+       "      <td>http://cdn.worldweatheronline.net/images/wsymb...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Time  Temperature(C)  Temperature(F)  FeelsLike(C)  FeelsLike(F)  \\\n",
+       "0     0               6              43             3            38   \n",
+       "1   100               6              44             4            38   \n",
+       "2   200               7              44             4            39   \n",
+       "3   300               7              44             4            39   \n",
+       "4   400               7              45             5            40   \n",
+       "\n",
+       "   DewPoint(C)  DewPoint(F)  Humidity  WindSpeed(Kmph)  WindSpeed(Miles)  ...  \\\n",
+       "0            4           38        83               15                10  ...   \n",
+       "1            4           39        85               15                 9  ...   \n",
+       "2            5           40        87               14                 9  ...   \n",
+       "3            5           41        89               14                 9  ...   \n",
+       "4            6           42        91               13                 8  ...   \n",
+       "\n",
+       "   WindChill(F)  HeatIndex(C)  HeatIndex(F) Pressure  Precipitation(mm)  \\\n",
+       "0            38             6            43     1020                0.3   \n",
+       "1            38             6            44     1020                0.3   \n",
+       "2            39             7            44     1020                0.3   \n",
+       "3            39             7            44     1019                0.3   \n",
+       "4            40             7            45     1019                0.7   \n",
+       "\n",
+       "   CloudCover  Visibility  WeatherCode  WeatherDescription  \\\n",
+       "0         100           2          266       Light drizzle   \n",
+       "1         100           3          266       Light drizzle   \n",
+       "2         100           4          353   Light rain shower   \n",
+       "3         100           5          353   Light rain shower   \n",
+       "4         100           6          353   Light rain shower   \n",
+       "\n",
+       "                                      WeatherIconUrl  \n",
+       "0  http://cdn.worldweatheronline.net/images/wsymb...  \n",
+       "1  http://cdn.worldweatheronline.net/images/wsymb...  \n",
+       "2  http://cdn.worldweatheronline.net/images/wsymb...  \n",
+       "3  http://cdn.worldweatheronline.net/images/wsymb...  \n",
+       "4  http://cdn.worldweatheronline.net/images/wsymb...  \n",
+       "\n",
+       "[5 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output_csv.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "490f2223-a622-4cfa-b09f-2cf57ef2b929",
    "metadata": {},
    "outputs": [],
    "source": []
